# Pruning4TSC

./: README.md  base_inception.py  base_lite.py  base_models_12_filters.py  base_models_16_filters.py  base_models_1e-4_no_weights.py  base_models_1e-6_no_weights.py  base_models_1e-7_no_weights.py  base_models_20_filters.py  base_models_24_filters.py  base_models_2e-5_weights_4_2_1.py  base_models_32_filters.py  base_models_4_filters.py  base_models_8_filters.py  filter_vis.ipynb  finetune_with_lr_scheduler.py  finetune_without_lr_scheduler.py  inception copy.py  inception.py  inception_base_models_1e-4_weights_4_2_1.py  inception_finetune.py  inception_scratch_training.py  lite_old.py  lite_org.py  perf_analysis.py  pyproject.toml  requirements.txt  res_flop_calc.ipynb  res_preperation.ipynb  resuls.ipynb  results_inception_calc.ipynb  scratch_training.py  scratch_training_1e-4_w_4_2_1.py  scratch_training_1e-6_w_4_2_1.py  scratch_training_1e-7_w_4_2_1.py  tests.ipynb  tmp.py  tmp_rem.ipynb  utils.py
configs/: base_inception.yaml  base_lite.yaml  base_lite_filter_ablation.yaml  base_lite_sparsity.yaml  finetune_lite.yaml  scratch_lite.yaml
scripts/: analyze.py  train.py
src/kd_lite/: losses.py
src/prune/: __init__.py  data.py  datasets.py  trainer.py  utils.py
src/prune/models/: __init__.py  inception.py  lite.py
